# prompt_to_ppt

./: .env.example  .gitignore  README.md  prd  pyproject.toml  requirements.txt
app/: __init__.py  config.py  pptx_renderer.py  routes.py  slide_generator.py  style_extractor.py
app/templates/: index.html
tests/: test_config.py  test_routes.py
